--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "@testing-library/react": "^10.0.4",
     "@testing-library/user-event": "^10.1.0",
     "bootswatch": "^4.4.1",
+    "flat-icons": "^1.0.0",
     "i": "^0.3.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-icons": "^3.10.0",
     "react-scripts": "3.4.1"
   },
   "scripts": {
